--- a/style.css
+++ b/style.css
@@ -17,13 +17,59 @@ body{
 header{
     background: oklch(45.9% 0.187 3.815);
     color: #fff;
+    padding-block: 2rem;
+    
 }
 
 .header-conteiner{
     max-width: 120rem;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+    ul{
+        display: flex;
+        gap: 5rem;
+        list-style: none;
+    }
 
     a{
         color: #fff;
+        text-decoration: none;
+
+    }
+
+    a:hover{
+        transform: scale(1.1);
+        font-weight: bold;
+        transition: ease-in-out .4s;
     }
 }
+
+main{
+    background: pink;
+    min-height: calc(100svh - 11.0rem);
+    padding-block: ;
+}
+
+    .main-conteiner{
+        max-width: 120rem;
+        margin: 0 auto;
+        line-height: 2.3rem;
+
+        section{
+            margin-bottom: 4rem;
+        }
+
+        h2{
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        p{
+            max-width: 68rem;
+            margin
+        }
+    }
