--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
+    scroll-behavior: smooth;
+    scroll-padding-top: 4rem;
 
 }
 
@@ -18,6 +20,8 @@ header{
     background: oklch(45.9% 0.187 3.815);
     color: #fff;
     padding-block: 2rem;
+    position: fixed;
+    width: 100%;
     
 }
 
@@ -51,7 +55,7 @@ header{
 main{
     background: pink;
     min-height: calc(100svh - 11.0rem);
-    padding-block: ;
+    padding-block: 15.8rem 4rem;
 }
 
     .main-conteiner{
@@ -70,6 +74,21 @@ main{
 
         p{
             max-width: 68rem;
-            margin
+            margin: 0 auto;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        .bandeira-japao{
+            background: #fff;
+            width: 35rem;
+            height: 20rem;
+        }
+        .circulo-vermelho{
+            background: red;
+            width: 15rem;
+            height: 15rem;
+            border-radius: 50%;
+            position: absolute;
+            /*top, buttom, left and right*/
         }
     }
